tests/checker/diagnostics/0099_core_not_int_09.ml.infer.expected
File "0099_core_not_int_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0099_core_not_int_09 is not a valid module name.

File "0099_core_not_int_09.ml", line 2, characters 36-37:
2 | let final = let local = true in not 0
                                        ^
Error: The constant 0 has type int but an expression was expected of type
         bool
