tests/checker/diagnostics/0099_core_not_int_09.ml
let not (x : bool) : bool = x
let final = let local = true in not 0
